# fujitsu-ansible-irmc-integration

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  DOCUMENTATION.md  LICENSE.md  README.md  galaxy.yml  pyproject.toml  requirements.txt  requirements.yml
docs/: CHANGELOG.md  CONFIGURATION.md  CONFIGURATION_ja.md  CONTRIBUTING.md  CONTRIBUTING_ja.md  EXAMPLE_PLAYBOOKS.md  EXAMPLE_PLAYBOOKS_ja.md  USER_GUIDE.md  USER_GUIDE_ja.md
examples/: boot_to_virtual_cd.yml  compare_server_configuration_against_saved_profiles.yml  create_new_user_and_remove_old_user.yml  create_user_from_file.yml  delete_all_arrays_and_create_new_array.yml  elcm_offline_update.yml  elcm_online_update.yml  export_ldap_settings_to_file.yml  export_server_configuration_profiles_to_files.yml  export_user_data_to_file.yml  get_server_facts.yml  import_ldap_settings_from_file.yml  irmc_biosbootorder_examples.yml  irmc_cas_examples.yml  irmc_certificate_examples.yml  irmc_compare_profiles_examples.yml  irmc_connectvm_examples.yml  irmc_elcm_offline_update_examples.yml  irmc_elcm_online_update_examples.yml  irmc_elcm_repository_examples.yml  irmc_eventlog_examples.yml  irmc_facts_examples.yml  irmc_fwbios_update_examples.yml  irmc_getvm_examples.yml  irmc_idled_examples.yml  irmc_ldap_examples.yml  irmc_license_examples.yml  irmc_ntp_examples.yml  irmc_powerstate_examples.yml  irmc_profiles_examples.yml  irmc_raid_examples.yml  irmc_scci_examples.yml  irmc_session_examples.yml  irmc_setnextboot_examples.yml  irmc_setvm_examples.yml  irmc_task_examples.yml  irmc_user_examples.yml  (+2 more)
(+234 files in other folders)
